--- a/configs/config.yml
+++ b/configs/config.yml
@@ -1,3 +1,10 @@
 # docker run --name=todo-db -e POSTGRES_PASSWORD='qwerty' -p 5436:5432 -d --rm postgres
 
 port: "8000"
+
+db:
+  host: "localhost"
+  port: "5436"
+  username: "postgres"
+  dbname: "postgres"
+  ssl_mode: "disable"
